After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697095 - critical assertion on startup when spell checking is disabled
critical assertion on startup when spell checking is disabled
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-02 11:25 UTC by Adam Dingle
Modified: 2015-02-03 15:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Reorganize webkit_pref_callback_enable_spell_checking (1.88 KB, patch)
2015-01-17 00:11 UTC, Michael Catanzaro
committed Details | Review
embed-prefs: avoid a critical warning (1.04 KB, patch)
2015-01-17 00:13 UTC, Michael Catanzaro
accepted-commit_now Details | Review

Description Adam Dingle 2013-04-02 11:25:30 UTC
If spell checking is disabled in Epiphany's preferences, then I see this critical assertion in the console every time I start Epiphany:

** (epiphany:23217): CRITICAL **: void webkit_web_context_set_spell_checking_languages(WebKitWebContext*, const gchar* const*): assertion `languages' failed
Comment 1 Michael Catanzaro 2015-01-17 00:11:00 UTC
Created attachment 294717 [details] [review]
Reorganize webkit_pref_callback_enable_spell_checking

Notably, don't call webkit_web_context_set_spell_checking_languages with
NULL, to avoid a critical warning.
Comment 2 Michael Catanzaro 2015-01-17 00:13:01 UTC
Created attachment 294718 [details] [review]
embed-prefs: avoid a critical warning

Alternative patch: a smaller diff that makes it easier to see what's going on, but this function is begging to be simplified, so I prefer my first patch.
Comment 3 Carlos Garcia Campos 2015-02-03 11:42:03 UTC
Review of attachment 294717 [details] [review]:

Thanks
Comment 4 Carlos Garcia Campos 2015-02-03 11:43:44 UTC
Review of attachment 294718 [details] [review]:

Both patches are about the same fix, you could probably squash them before landing
Comment 5 Michael Catanzaro 2015-02-03 15:05:00 UTC
They're alternative patches; I will commit the first patch since it makes the code nicer.
Comment 6 Michael Catanzaro 2015-02-03 15:20:59 UTC
Attachment 294717 [details] pushed as 3cc9ca4 - Reorganize webkit_pref_callback_enable_spell_checking