Reorganize webkit_pref_callback_enable_spell_checking

Notably, don't call webkit_web_context_set_spell_checking_languages with
NULL, to avoid a critical warning.

https://bugzilla.gnome.org/show_bug.cgi?id=697095